--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,16 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
+    
+    <link rel="stylesheet" href="../src/style.css">
+    
+    <script src="https://kit.fontawesome.com/1c887c5845.js" crossorigin="anonymous"></script>
+
     <title>Exercise Tracker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" ></div>
+    <!-- class="bg" -->
   </body>
 </html>
