--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../src/style.css">
     
     <script src="https://kit.fontawesome.com/1c887c5845.js" crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" ></div>
-    <!-- class="bg" -->
+    <div id="root">
+    </div>
   </body>
 </html>
